--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,27 @@
 	<properties>
 		<servlet.version>2.5</servlet.version>
 		<org.springframework.version>4.1.6.RELEASE</org.springframework.version>
+		<org.springframework.security.version>4.2.3.RELEASE</org.springframework.security.version>
 		<org.slf4j.version>1.7.12</org.slf4j.version>
 		<ch.qos.logback.version>1.1.3</ch.qos.logback.version>
 		<jstl.version>1.2</jstl.version>
 		<!-- Java dependency -->
 		<lombok.version>1.16.4</lombok.version>
 		<logback-ext-spring.version>0.1.2</logback-ext-spring.version>
+		<!-- eGovFrame dependency -->
+        <egovframework.rte.version>3.5.0</egovframework.rte.version>
 	</properties>
+	
+	<repositories>
+	    <!-- eGovFrame -->
+        <repository>
+            <id>egovframe</id>
+            <url>http://www.egovframe.go.kr/maven/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
 
 	<dependencies>
@@ -91,6 +105,44 @@
 			<artifactId>spring-web</artifactId>
 			<version>${org.springframework.version}</version>
 		</dependency>
+		
+		<!-- Spring Security -->
+		<!-- http://www.springframework.org/security/tags 를 사용하기 위해 필요한 것 -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-taglibs</artifactId>
+		    <version>${org.springframework.security.version}</version>
+		</dependency>
+		
+		<!-- framework -->
+		<!-- 페이징 기능을 위해 ui태그를 추가하려고 했더니 이게 필요하다고 한다-->
+		<!-- 이걸로 끝나지 않는다 repository를 또 추가해야 한다 -->
+		<!-- 
+			전자정부 프레임워크의 라이브러리
+			다만 전자정부 프레임워크는 별도의 저장소에서 다운을 받아야하므로 repository를 등록해줘야 한다고 한다.
+		 -->
+		<dependency>
+            <groupId>egovframework.rte</groupId>
+            <artifactId>egovframework.rte.fdl.cmmn</artifactId>
+            <version>${egovframework.rte.version}</version>
+            <exclusions>
+                <!-- Logging -->
+                <exclusion>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-core</artifactId>
+                </exclusion>
+                <!-- Log4j2 SLF4J Bridge -->
+                <exclusion>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-slf4j-impl</artifactId>
+                </exclusion>
+                <!-- SLF4J Log4j 1.x Bridge -->
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>log4j-over-slf4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
 		<!-- SLF4J: http://www.slf4j.org -->
 		<dependency>
